tests/fixtures/errors/e0407_min_two_literals.mimz
// expect: E0407
module M {
  out y: bits[8]
  y = min(5, 10)
}
